Fixed problem with hiding Shifty Spritz reader.

--- a/chrome/source/css/style.styl
+++ b/chrome/source/css/style.styl
@@ -28,9 +28,6 @@
     opacity 1
     bottom -40px
 
-  &.hide
-    display none
-
   i
     line-height 40px
     cursor pointer
